--- a/src/App.css
+++ b/src/App.css
@@ -37,7 +37,7 @@
   }
 }
 
-button{
+/* button{
   padding: 10px 20px;
   background-color: #7ab97a;
   color:#fff;
@@ -51,4 +51,57 @@ span{
   font-weight: bolder;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   color: grey;
+} */
+.component-body-container {
+  padding: 20px;
+}
+
+.custom-btn {
+  padding: 10px;
+  border: none;
+  margin-right: 10px;
+  text-transform: uppercase;
+  width: 80px;
+  font-size: 0.9rem;
+  cursor: pointer;
+  outline: none;
+}
+
+.add-btn {
+  background: #7ab97a;
+  color: #fff;
+}
+
+.grid-container {
+  display: grid;
+  grid-template-columns: 40% 30% auto;
+  margin-bottom: 10px;
+}
+
+.heading-container {
+  margin: 30px 0 30px 0;
+  width: 100%;
+}
+
+.grid-item {
+  background-color: rgba(255, 255, 255, 0.8);
+  font-size: 1.15rem;
+  word-wrap: break-word;
+  padding-right: 10px;
+}
+
+.name-heading, .phone-heading {
+  font-size: 1rem;
+  font-weight: 600;
+  color: #808080;
+  text-transform: uppercase;
+}
+
+.delete-btn{    
+  width: 100px;
+  height: 35px;
+  background-color: rgb(243, 162, 162);
+  /* background: red; */
+  border: none;
+  /* background-color: rgb(5, 5, 5); */
 }
